Add a search screen with dummy data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="server_address">Server address</string>
     <string name="app_requires_poznode_configure_the_connection">This application connects to a PozNode server. Please configure the connection below</string>
     <string name="your_favs_will_appear_here">Your favorites will appear here. Use the Search tab to find a stop or line.</string>
+    <string name="no_results">No results</string>
 </resources>
