--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="failed_to_search_are_you_connected">Failed to search. Are you connected?</string>
     <string name="bus_stop_icon">Bus stop icon</string>
     <string name="line_icon">Line icon</string>
+    <string name="expand_directions_arrow">Expand directions arrow</string>
 </resources>
